@@ -20,7 +20,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.frostwire.android" android:installLocation="auto"
-	android:versionCode="1000194" android:versionName="1.5.8">
+	android:versionCode="100195" android:versionName="1.5.8">
 
 	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="21" />
 
